Done it until before Section 1

--- a/index.html
+++ b/index.html
@@ -2,27 +2,27 @@
 <html>
 
 <head>
+    <link rel="stylesheet" href="style.css">
     <title>Web IronSkydrive</title>
 </head>
 
 <body>
-    <nav>
+    <nav class="nav-bar">
         <ul>
             <li><a href="#structure">Day Structure</a></li>
             <li> <a href="#team">Team</a></li>
             <li><a href="#schedule">Schedule</a></li>
         </ul>
     </nav>
-    <header>
-        <h1><img src="https://s3-eu-west-1.amazonaws.com/ih-materials/uploads/ironhack-skydive-logo.png" alt="IronSkydive Logo">
-            IronSkydrive</h1>
+    <header class="header">
+        <h1><img src="https://s3-eu-west-1.amazonaws.com/ih-materials/uploads/ironhack-skydive-logo.png" alt="IronSkydive Logo">IronSkydrive</h1>
         <h2>Let the trip begin</h2>
-        <aside>
+        <aside class="quote">
             <em>The best experience of our lives</em>
             <p>Rafael Bosch</p>
         </aside> <!--em is for italic font-->
     </header>
-    <section class="FirstSection">
+    <section class="general-information">
         <div>
             <article>
                 <h3>Hello</h3>
@@ -41,7 +41,7 @@
             </article>
         </div>
     </section>
-    <section class="SecondSection">
+    <section class="structure">
         <h3>How do we structure the day?</h3>
         <article>
             <h4>Training</h4>
@@ -65,28 +65,28 @@
         </article>
     </section>
 
-    <section class="ThirdSection">
+    <section class="team">
         <div>
                 <h3>Team</h3>
                 <p>Our team collectivitely has 75 year of experience</p>
                 <hr>
                 <article>
                     <b>Harold Rothstein</b>
-                    <img src="https://s3-eu-west-1.amazonaws.com/ih-materials/uploads/team-1.jpg" alt="foto face" width="100%" height="250px">
+                    <img src="https://s3-eu-west-1.amazonaws.com/ih-materials/uploads/upload_c18b1c463b80090894237a262dfdfbad.jpg" alt="foto face" width="100%" height="250px">
                 </article>
                 <article>
-                    <h4 style="bold">Susan Philips</h4>
-                    <img src="https://s3-eu-west-1.amazonaws.com/ih-materials/uploads/team-2.jpg" alt="foto face" width="100%" height="250px">
+                    <h4>Susan Philips</h4>
+                    <img src="https://s3-eu-west-1.amazonaws.com/ih-materials/uploads/upload_a18d6123a7c8e75f7e70a4e59b941093.jpg" alt="foto face" width="100%" height="250px">
                 </article>
                 <article>
-                        <h4 style="bold">Taylor Roberts</h4>
-                        <img src="https://s3-eu-west-1.amazonaws.com/ih-materials/uploads/team-3.jpg" alt="foto face" width="100%" height="250px">
+                        <h4>Taylor Roberts</h4>
+                        <img src="https://s3-eu-west-1.amazonaws.com/ih-materials/uploads/upload_7104a331530d1b0611da55093b7dc421.jpg" alt="foto face" width="100%" height="250px">
                 </article>
         </div>
         <hr>
     </section>
 
-    <section class="FourthSection">
+    <section class="schedule">
         <h2>Section Four</h2>
         <em>Nothing to Add!</em>
     </section>
