--- a/index.html
+++ b/index.html
@@ -22,85 +22,89 @@
             <p>Rafael Bosch</p>
         </aside> <!--em is for italic font-->
     </header>
-    <section class="general-information">
-        <div>
-            <article>
+
+
+    <section id="general-information">
+        <div class="dark-background">
+            <article >
+                <br>
                 <h3>Hello</h3>
-                <p>Welcome to IronSkydrive page, the best adventure </p>
-                <a href="#">Learn more</a>
+                <p class="text">Welcome to IronSkydrive page, the best adventure </p>
+                <a href="#" class="link-btn">Learn more</a>
             </article>
-            <article>
+            <article >
                 <h3>About us</h3>
-                <p>We like a lot programming websites, but we also love practice sport</p>
-                <a href="#">Watch Video</a>
+                <p class="text">We like a lot programming websites, but we also love practice sport</p>
+                <a href="#" class="link-btn">Watch Video</a>
             </article>
             <article>
                 <h3>wanna join?</h3>
-                <p>Join our fitness programm...</p>
-                <a href="#">Register</a>
+                <p class="text">Join our fitness programm...</p>
+                <a href="#" class="link-btn">Register</a>
             </article>
         </div>
     </section>
-    <section class="structure">
+
+    <section id="structure">
         <h3>How do we structure the day?</h3>
-        <article>
+        <article class="service-box">
             <h4>Training</h4>
             <p>We teach all necesary things to jump.. </p>
             <img src="https://s3-eu-west-1.amazonaws.com/ih-materials/uploads/ironskydive-training.png" alt="Image">
         </article>
-        <article>
+        <article class="service-box">
             <h4>Get ready</h4>
             <p>You are already prepare.. </p>
             <img src="https://s3-eu-west-1.amazonaws.com/ih-materials/uploads/ironskydive-get-ready.png" alt="image">
         </article>
-        <article>
+        <article class="service-box">
             <h4>Fly</h4>
             <p>You are ready, and the plane</p>
             <img src="https://s3-eu-west-1.amazonaws.com/ih-materials/uploads/ironskydive-fly.png" alt="image">
         </article>
-        <article>
+        <article class="service-box">
             <h4>Jump!</h4>
             <p>You have done the most comlicated. Just jump.</p>
             <img src="https://s3-eu-west-1.amazonaws.com/ih-materials/uploads/ironskydive-jump.png" alt="image">
         </article>
     </section>
 
-    <section class="team">
-        <div>
+    <section id="team">
+        <div class="dark-background">
                 <h3>Team</h3>
-                <p>Our team collectivitely has 75 year of experience</p>
+                <p class="section-text">Our team collectivitely has 75 year of experience</p>
                 <hr>
                 <article>
-                    <b>Harold Rothstein</b>
+                    <h4 class="member-name">Harold Rothstein</h4>
                     <img src="https://s3-eu-west-1.amazonaws.com/ih-materials/uploads/upload_c18b1c463b80090894237a262dfdfbad.jpg" alt="foto face" width="100%" height="250px">
                 </article>
                 <article>
-                    <h4>Susan Philips</h4>
+                    <h4 class="member-name">Susan Philips</h4>
                     <img src="https://s3-eu-west-1.amazonaws.com/ih-materials/uploads/upload_a18d6123a7c8e75f7e70a4e59b941093.jpg" alt="foto face" width="100%" height="250px">
                 </article>
                 <article>
-                        <h4>Taylor Roberts</h4>
+                        <h4 class="member-name">Taylor Roberts</h4>
                         <img src="https://s3-eu-west-1.amazonaws.com/ih-materials/uploads/upload_7104a331530d1b0611da55093b7dc421.jpg" alt="foto face" width="100%" height="250px">
                 </article>
         </div>
         <hr>
     </section>
 
-    <section class="schedule">
+    <section id="schedule">
         <h2>Section Four</h2>
         <em>Nothing to Add!</em>
     </section>
 
 
-    <footer>
-        <section>
+    <footer class="dark-background footer">
+        <section >
             <h5>Contact Information</h5>
-            <address>IronSkydive <br> 33 Rue la Fayette <br> 75009 Paris, France <br> +33 (0) 619 193 088</address>
+            <address class="address">IronSkydive <br> 33 Rue la Fayette <br> 75009 Paris, France <br> +33 (0) 619 193 088</address>
             <br>
             <h5>Follow us</h5>
             <ul>
-                <li> <a href="#target" target="_blank">Twitter</a></li>
-                <li> <a href="#target" target="_blank">Facebook</a></li>
+                <li><a href="#target" target="_blank">Twitter</a></li>
+                <li><a href="#target" target="_blank">Facebook</a></li>
                 <li><a href="#target" target="_blank">Instagram</a></li>
             </ul>
         </section>
