--- a/index.html
+++ b/index.html
@@ -8,84 +8,94 @@
 
 <body>
     <nav class="nav-bar">
-        <ul>
+        <ul class="nav-bar-ul">
             <li><a href="#structure">Day Structure</a></li>
             <li> <a href="#team">Team</a></li>
             <li><a href="#schedule">Schedule</a></li>
         </ul>
     </nav>
     <header class="header">
-        <h1><img src="https://s3-eu-west-1.amazonaws.com/ih-materials/uploads/ironhack-skydive-logo.png" alt="IronSkydive Logo">IronSkydrive</h1>
+        <h1><img src="https://s3-eu-west-1.amazonaws.com/ih-materials/uploads/ironhack-skydive-logo.png"
+                alt="IronSkydive Logo">IronSkydrive</h1>
         <h2>Let the trip begin</h2>
         <aside class="quote">
             <em>The best experience of our lives</em>
             <p>Rafael Bosch</p>
-        </aside> <!--em is for italic font-->
+        </aside>
+        <!--em is for italic font-->
     </header>
-
 
     <section id="general-information">
         <div class="dark-background">
-            <article >
-                <br>
+            <article class="container">
                 <h3>Hello</h3>
                 <p class="text">Welcome to IronSkydrive page, the best adventure </p>
                 <a href="#" class="link-btn">Learn more</a>
             </article>
-            <article >
+            <article class="container">
                 <h3>About us</h3>
                 <p class="text">We like a lot programming websites, but we also love practice sport</p>
                 <a href="#" class="link-btn">Watch Video</a>
             </article>
-            <article>
-                <h3>wanna join?</h3>
-                <p class="text">Join our fitness programm...</p>
+            <article class="container">
+                <h3>Wanna join?</h3>
+                <p class="text">Join our fitness programm to be in progress</p>
                 <a href="#" class="link-btn">Register</a>
             </article>
         </div>
     </section>
 
+
+    <!-- For me I need some margins on the corners, so much space between them -->
     <section id="structure">
         <h3>How do we structure the day?</h3>
-        <article class="service-box">
-            <h4>Training</h4>
-            <p>We teach all necesary things to jump.. </p>
-            <img src="https://s3-eu-west-1.amazonaws.com/ih-materials/uploads/ironskydive-training.png" alt="Image">
-        </article>
-        <article class="service-box">
-            <h4>Get ready</h4>
-            <p>You are already prepare.. </p>
-            <img src="https://s3-eu-west-1.amazonaws.com/ih-materials/uploads/ironskydive-get-ready.png" alt="image">
-        </article>
-        <article class="service-box">
-            <h4>Fly</h4>
-            <p>You are ready, and the plane</p>
-            <img src="https://s3-eu-west-1.amazonaws.com/ih-materials/uploads/ironskydive-fly.png" alt="image">
-        </article>
-        <article class="service-box">
-            <h4>Jump!</h4>
-            <p>You have done the most comlicated. Just jump.</p>
-            <img src="https://s3-eu-west-1.amazonaws.com/ih-materials/uploads/ironskydive-jump.png" alt="image">
-        </article>
+        <div>
+            <article class="service-box">
+                <h4>Training</h4>
+                <p>We teach all necesary things to jump.. </p>
+                <img src="https://s3-eu-west-1.amazonaws.com/ih-materials/uploads/ironskydive-training.png" alt="Image">
+            </article>
+            <article class="service-box">
+                <h4>Get ready</h4>
+                <p>You are already prepare.. </p>
+                <img src="https://s3-eu-west-1.amazonaws.com/ih-materials/uploads/ironskydive-get-ready.png"
+                    alt="image">
+            </article>
+            <article class="service-box">
+                <h4>Fly</h4>
+                <p>You are ready, and the plane</p>
+                <img src="https://s3-eu-west-1.amazonaws.com/ih-materials/uploads/ironskydive-fly.png" alt="image">
+            </article>
+            <article class="service-box">
+                <h4>Jump!</h4>
+                <p>You have done the most comlicated. Just jump.</p>
+                <img src="https://s3-eu-west-1.amazonaws.com/ih-materials/uploads/ironskydive-jump.png" alt="image">
+            </article>
+        </div>
     </section>
 
     <section id="team">
         <div class="dark-background">
-                <h3>Team</h3>
-                <p class="section-text">Our team collectivitely has 75 year of experience</p>
-                <hr>
+            <h3>Team</h3>
+            <p class="section-text">Our team collectivitely has 75 year of experience</p>
+            <hr>
+            <div class="prueba">
                 <article>
                     <h4 class="member-name">Harold Rothstein</h4>
-                    <img src="https://s3-eu-west-1.amazonaws.com/ih-materials/uploads/upload_c18b1c463b80090894237a262dfdfbad.jpg" alt="foto face" width="100%" height="250px">
+                    <img src="https://s3-eu-west-1.amazonaws.com/ih-materials/uploads/upload_c18b1c463b80090894237a262dfdfbad.jpg"
+                        alt="foto face" width="100%" height="250px">
                 </article>
                 <article>
                     <h4 class="member-name">Susan Philips</h4>
-                    <img src="https://s3-eu-west-1.amazonaws.com/ih-materials/uploads/upload_a18d6123a7c8e75f7e70a4e59b941093.jpg" alt="foto face" width="100%" height="250px">
+                    <img src="https://s3-eu-west-1.amazonaws.com/ih-materials/uploads/upload_a18d6123a7c8e75f7e70a4e59b941093.jpg"
+                        alt="foto face" width="100%" height="250px">
                 </article>
                 <article>
-                        <h4 class="member-name">Taylor Roberts</h4>
-                        <img src="https://s3-eu-west-1.amazonaws.com/ih-materials/uploads/upload_7104a331530d1b0611da55093b7dc421.jpg" alt="foto face" width="100%" height="250px">
+                    <h4 class="member-name">Taylor Roberts</h4>
+                    <img src="https://s3-eu-west-1.amazonaws.com/ih-materials/uploads/upload_7104a331530d1b0611da55093b7dc421.jpg"
+                        alt="foto face" width="100%" height="250px">
                 </article>
+            </div>
         </div>
         <hr>
     </section>
@@ -97,9 +107,10 @@
 
 
     <footer class="dark-background footer">
-        <section >
+        <section>
             <h5>Contact Information</h5>
-            <address class="address">IronSkydive <br> 33 Rue la Fayette <br> 75009 Paris, France <br> +33 (0) 619 193 088</address>
+            <address class="address">IronSkydive <br> 33 Rue la Fayette <br> 75009 Paris, France <br> +33 (0) 619 193
+                088</address>
             <br>
             <h5>Follow us</h5>
             <ul>
@@ -108,8 +119,9 @@
                 <li><a href="#target" target="_blank">Instagram</a></li>
             </ul>
         </section>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2624.142047744348!2d2.3354330160472316!3d48.87456857928921!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e66e38f817b573%3A0x48d69c30470e7aeb!2sIronhack!5e0!3m2!1sen!2ses!4v1495208746099" class="map-frame" frameborder="0" style="border:0" allowfullscreen></iframe>
     </footer>
-    
+
 </body>
 
 </html>
