--- a/index.html
+++ b/index.html
@@ -102,6 +102,29 @@
 
     <section id="schedule">
         <h2>Section Four</h2>
+        <form class="slot-form" action="/register" method="POST">
+            <div class="slot-fomr-container">
+                <label for="username">Username:</label>
+                <input type="text" name="username" id="username"><br>
+            </div>
+            <div class="slot-fomr-container">
+                <label for="email">Enter your Email: </label>
+                <input type="email" name="email" id="email"><br>
+            </div>
+            <div class="slot-fomr-container">
+                <label for="participants">participants: </label>
+                <input type="number" name="number" id="participants"><br>
+            </div>
+            <div class="slot-fomr-container">
+                <label for="date">Data</label>
+                <input type="date" name="date" id="date"><br>
+            </div>
+            <div class="slot-fomr-container">
+                <label for="time"></label>
+                <input type="select" name="time"id="time"><br>
+            </div>
+            <button type="submit">Log in</button>
+        </form>
         <em>Nothing to Add!</em>
     </section>
 
